fixed mobile cutoff

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -243,7 +243,7 @@ p {
    @include center(86%);
    margin-top:1.5rem;
    // position: relative;
-   max-width: 2680px;
+   // max-width: 2680px;
    margin-bottom: 1.5rem;
    border-bottom: 1px solid #ccc;
    padding-bottom: 0.5rem;
@@ -428,7 +428,7 @@ main {
 .cards-container {
   // background: transparent;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(465px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(414px, 1fr));
 }
 
 .card {
@@ -437,7 +437,7 @@ main {
   // height: auto;
   margin-left: 0vw;
   margin-right: auto;
-  max-width: 50rem;
+  // max-width: 50rem;
 }
 .container {
   position: relative;
